--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
         section {
             background-color: azure;
-            width: 25%;
+            width: 100%;
             font-style: oblique;
         }
 
         main {
             background-color: beige;
-            width: 70%;
+            width: 100%;
             float: right;
         }
 
@@ -53,7 +53,8 @@
         }
 
         .imgstyle {
-            width: 100%;
+            width: 80%;
+            height: 700px;
         }
 
         ol {
@@ -71,38 +72,36 @@
     </header>
     <br>
     <br>
-    <div class="box">
-        <section>
+    <section>
 
-            <h2> D.Ahmed Mohamed </h2>
-            <img src="https://scontent.fcai19-8.fna.fbcdn.net/v/t39.30808-6/300948797_591928775772860_7671784813495922491_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=Bk1VkRWwhawAX8ksYK6&_nc_ht=scontent.fcai19-8.fna&oh=00_AT_ffREvkOeZtDOoXsTkiQ-zeiZ-Nrnst3QOhdDLkfuf0w&oe=630B029E"
-                class="imgstyle">
+        <h2> D.Ahmed Mohamed </h2>
+        <img src="https://scontent.fcai19-8.fna.fbcdn.net/v/t39.30808-6/300948797_591928775772860_7671784813495922491_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=Bk1VkRWwhawAX8ksYK6&_nc_ht=scontent.fcai19-8.fna&oh=00_AT_ffREvkOeZtDOoXsTkiQ-zeiZ-Nrnst3QOhdDLkfuf0w&oe=630B029E"
+            class="imgstyle">
 
-        </section>
+    </section>
 
-        <main>
+    <main>
 
-            <h2> تفاصيل المتابعه مع الكابتن </h2>
-            <p>
-            <ol>1.هتتمرن في أي مكان في العالم مع المدرب الدولي معتمد من الاتحاد الدولي لعلوم الرياضه البريطاني واخصائي
-                التغذيه العلاجيه والرياضيه واخصائي العلاج الطبيعي
-                Coach /Ahmed mohamed</ol>
-            <ol> 2.نظام غذائي مخصص ليك والوجبات اللي تختارها وبحددلك مواعيد وجباتك على مدار اليوم ويتغير النظام الغذائي
-                على حسب التطور </ol>
-            <ol>3. متابعه يوميا على مدار اليوم وتقييم كل أسبوع</ol>
-            <ol>4.كتاب pdf ولينك قناه فيها جميع وصفات الاكل بطريقه صحيه يعني دايت بدون حرمان</ol>
-            <ol>5.نصايح بجانب النظام الغذائي والرياضي</ol>
-            <ol>6.نظام رياضي مخصص ليك (في البيت أو الجيم)</ol>
-            <ol>7.البرنامج الرياضي شامل(تمرينات استرتشات قبل وبعد التمرين. تصوير فيديوهات للتمرين على حسب حالتك ومستوى
-                تقدمك. تمرينات لياقه بدنيه وتمرينات تقويه الأعصاب الجزء العلوي والجزء السفلي للجسم)</ol>
-            <ol>8.مكفأه ماديه نتيجه الالتزام بالدايت والتمرين</ol>
-            <ol>للحجز والاستعلام</ol>
-            <ol>01065314252</ol>
-            <ol>01206746917</ol>
-            </p>
+        <h2> تفاصيل المتابعه مع الكابتن </h2>
+        <p>
+        <ol>1.هتتمرن في أي مكان في العالم مع المدرب الدولي معتمد من الاتحاد الدولي لعلوم الرياضه البريطاني واخصائي
+            التغذيه العلاجيه والرياضيه واخصائي العلاج الطبيعي
+            Coach /Ahmed mohamed</ol>
+        <ol> 2.نظام غذائي مخصص ليك والوجبات اللي تختارها وبحددلك مواعيد وجباتك على مدار اليوم ويتغير النظام الغذائي
+            على حسب التطور </ol>
+        <ol>3. متابعه يوميا على مدار اليوم وتقييم كل أسبوع</ol>
+        <ol>4.كتاب pdf ولينك قناه فيها جميع وصفات الاكل بطريقه صحيه يعني دايت بدون حرمان</ol>
+        <ol>5.نصايح بجانب النظام الغذائي والرياضي</ol>
+        <ol>6.نظام رياضي مخصص ليك (في البيت أو الجيم)</ol>
+        <ol>7.البرنامج الرياضي شامل(تمرينات استرتشات قبل وبعد التمرين. تصوير فيديوهات للتمرين على حسب حالتك ومستوى
+            تقدمك. تمرينات لياقه بدنيه وتمرينات تقويه الأعصاب الجزء العلوي والجزء السفلي للجسم)</ol>
+        <ol>8.مكفأه ماديه نتيجه الالتزام بالدايت والتمرين</ol>
+        <ol>للحجز والاستعلام</ol>
+        <ol>01065314252</ol>
+        <ol>01206746917</ol>
+        </p>
 
-        </main>
-    </div>
+    </main>
 
     <br>
     <br>
